Tests/CompilerTests/negative/invalid-return.expected
negative/invalid-return.hylo:2.3-11: error: expected 'Void', found '{Void, Void}'
  ((), ())
  ~~~~~~~~
